--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-material-ui-carousel": "^3.4.2",
     "typescript": "4.9.4"
   },
   "devDependencies": {
